:sparkles: Progress Bar CSS Fix :sparkles:

--- a/Site_Form/index.html
+++ b/Site_Form/index.html
@@ -63,7 +63,9 @@ textarea {
 
 .progress-bar {
   height: 100%;
+  width: 0%;
   background-color: #007bff;
+  transition: 0.4s all ease;
 }
 
 /* Style pour le bouton de soumission */
