--- a/Site_Form/index.html
+++ b/Site_Form/index.html
@@ -82,6 +82,21 @@ textarea {
 #submit-btn:hover {
   background-color: #0069d9;
 }
+
+.radio-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.radio-group label {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.radio-group input[type="radio"] {
+  margin-right: 5px;
+}
 </style>
 <form id="satisfaction-form">
   <fieldset>
@@ -93,16 +108,31 @@ textarea {
     </div>
 
     <div class="form-group">
-      <label for="evaluation">Evaluation</label>
-      <select id="evaluation" name="evaluation" required>
-        <option value=""></option>
-        <option value="excellent">Excellent</option>
-        <option value="très bien">Très bien</option>
-        <option value="bien">Bien</option>
-        <option value="passable">Passable</option>
-        <option value="insatisfaisant">Insatisfaisant</option>
-      </select>
+      <legend>Qualité du contenu</legend>
+      <div class="radio-group">
+        <label for="excellent">
+          <input type="radio" id="excellent" name="evaluation" value="excellent" required>
+          Excellent
+        </label>
+        <label for="tres-bien">
+          <input type="radio" id="tres-bien" name="evaluation" value="tres-bien">
+          Très bien
+        </label>
+        <label for="bien">
+          <input type="radio" id="bien" name="evaluation" value="bien">
+          Bien
+        </label>
+        <label for="passable">
+          <input type="radio" id="passable" name="evaluation" value="passable">
+          Passable
+        </label>
+        <label for="insatisfaisant">
+          <input type="radio" id="insatisfaisant" name="evaluation" value="insatisfaisant">
+          Insatisfaisant
+        </label>
+      </div>
     </div>
+    
 
     <div class="form-group">
       <label for="methode">Méthode</label>
