--- a/Site_Form/index.html
+++ b/Site_Form/index.html
@@ -1,114 +1,19 @@
-<style>
-  /* Style de base pour le formulaire */
-#satisfaction-form {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-family: Arial, sans-serif;
-}
-
-/* Style pour les titres */
-legend {
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-/* Style pour les champs */
-.form-group {
-  margin-bottom: 15px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-input[type="text"],
-select,
-textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
-select {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.97 7.999H7.03L12 13.471z"/></svg>');
-  background-repeat: no-repeat;
-  background-position: right 8px center;
-  background-size: 12px;
-  padding-right: 25px;
-}
-
-textarea {
-  height: 150px;
-}
-
-/* Style pour la barre de progression */
-.progress {
-  height: 20px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-.progress-bar {
-  height: 100%;
-  width: 0%;
-  background-color: #007bff;
-  transition: 0.4s all ease;
-}
-
-/* Style pour le bouton de soumission */
-#submit-btn {
-  background-color: #007bff;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-#submit-btn:hover {
-  background-color: #0069d9;
-}
-
-.radio-group {
-  display: flex;
-  flex-direction: column;
-}
-
-.radio-group label {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.radio-group input[type="radio"] {
-  margin-right: 5px;
-}
-
-span{
-  color: red;
-}
-</style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 <form id="satisfaction-form">
   <fieldset>
     <legend>Formulaire de satisfaction</legend>
 
     <div class="form-group">
-      <label for="contenu">Contenu<span>*</span></label>
-      <input type="text" id="contenu" name="contenu" required>
+      <label for="coursof">Cours de <span>*</span></label>
+      <select id="coursof" name="coursof" required>
+        <option value=""></option>
+        <option value="symfony">Symfony</option>
+        <option value="css">Framework CSS</option>
+        <option value="js">Node JS</option>
+      </select>
     </div>
 
     <div class="form-group">
@@ -143,8 +48,7 @@ span{
       <select id="methode" name="methode" required>
         <option value=""></option>
         <option value="en ligne">En ligne</option>
-        <option value="par téléphone">Par téléphone</option>
-        <option value="en personne">En personne</option>
+        <option value="en personne">En présentielle</option>
       </select>
     </div>
 
