--- a/Site_Form/index.html
+++ b/Site_Form/index.html
@@ -1,15 +1,14 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <form id="satisfaction-form">
-  <fieldset>
+  <!-- <fieldset> -->
     <legend>Formulaire de satisfaction</legend>
 
-    <div class="form-group">
-      <label for="coursof">Cours de <span>*</span></label>
-      <select id="coursof" name="coursof" required>
-        <option value=""></option>
+    <div class="custom-select">
+      <select class="" id="coursof" name="coursof" required>
+        <option value="">Sélectionner un cours <span>*</span></option>
         <option value="symfony">Symfony</option>
         <option value="css">Framework CSS</option>
         <option value="js">Node JS</option>
@@ -17,7 +16,7 @@
     </div>
 
     <div class="form-group">
-      <legend>Qualité du contenu<span>*</span></legend>
+      <p>Qualité du contenu <span>*</span></p>
       <div class="radio-group">
         <label for="excellent">
           <input type="radio" id="excellent" name="evaluation" value="excellent" required>
@@ -43,16 +42,15 @@
     </div>
     
 
-    <div class="form-group">
-      <label for="methode">Méthode<span>*</span></label>
-      <select id="methode" name="methode" required>
-        <option value=""></option>
+    <div class="custom-select">
+      <select class="select-selected" id="methode" name="methode" required>
+        <option value="">Format Du Cours <span>*</span></option>
         <option value="en ligne">En ligne</option>
         <option value="en personne">En présentielle</option>
       </select>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" style="display: flex; flex-direction: row; align-items: center; gap: 15px;">
       <label for="commentaire">Commentaire</label>
       <textarea id="commentaire" name="commentaire"></textarea>
     </div>
@@ -60,10 +58,10 @@
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-
+    <!-- <span>Nécéssaire</span> -->
     <button type="submit" id="submit-btn">Soumettre</button>
 
-  </fieldset>
+  <!-- </fieldset> -->
 </form>
 <script>
   const form = document.getElementById('satisfaction-form');
@@ -121,3 +119,4 @@
     }
   });
 </script>
+<script src="index.js"></script>
